<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name" translatable="false">Infinity</string>
    <string name="login_activity_label">Login</string>
    <string name="search_activity_label" translatable="false"> </string>
    <string name="comment_activity_label">Send Comment</string>
    <string name="comment_activity_label_is_replying">Reply</string>
    <string name="post_text_activity_label">Text Post</string>
    <string name="subreddit_selection_activity_label">Select a Subreddit</string>
    <string name="post_link_activity_label">Link Post</string>
    <string name="post_image_activity_label">Image Post</string>
    <string name="post_video_activity_label">Video Post</string>
    <string name="rules_activity_label">Rules</string>
    <string name="search_subreddits_activity_label">Subreddits</string>
    <string name="edit_post_activity_label">Edit Post</string>
    <string name="edit_comment_activity_label">Edit Comment</string>
    <string name="view_message_activity_label">Inbox</string>
    <string name="settings_activity_label">Settings</string>
    <string name="account_saved_thing_activity_label">Saved</string>
    <string name="create_multi_reddit_activity_label">Create Multireddit</string>
    <string name="subreddit_multiselection_activity_label">Select Subreddits</string>
    <string name="custom_theme_listing_activity_label">Custom Themes</string>
    <string name="customize_theme_activity_label">Customize Theme</string>
    <string name="customize_theme_activity_create_theme_label">Create Theme</string>
    <string name="theme_preview_activity_label">Theme Preview</string>
    <string name="edit_multi_reddit_activity_label">Edit Multireddit</string>
    <string name="selected_subeddits_activity_label">Selected Subreddits</string>
    <string name="report_activity_label">Report</string>
    <string name="view_imgur_media_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_imgur_media_activity_video_label">Video %1$d/%2$d</string>
    <string name="send_private_message_activity_label">Send PM</string>
    <string name="view_reddit_gallery_activity_image_label">Image %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_gif_label">Gif %1$d/%2$d</string>
    <string name="view_reddit_gallery_activity_video_label">Video %1$d/%2$d</string>
    <string name="submit_crosspost_activity_label">Crosspost</string>
    <string name="give_award_activity_label">Give Award</string>
    <string name="subreddit_filter_popular_and_all_activity_label">r/all and r/popular</string>
    <string name="customize_post_filter_activity_label">Customize Post Filter</string>
    <string name="filtered_posts_activity_subtitle">Filtered Posts</string>
    <string name="post_filter_preference_activity_label">Post Filter</string>
    <string name="search_users_result_activity_label">Users</string>
    <string name="multireddit_selection_activity_label">Select a Multireddit</string>
    <string name="post_gallery_activity_label">Gallery Post</string>
    <string name="trending_activity_label">Trending</string>
    <string name="wiki_activity_label">Wiki</string>
    <string name="edit_profile_activity_label">Edit Profile</string>
    <string name="post_poll_activity_label">Poll Post</string>
    <string name="history_activity_label">History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_download">Download</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_comment">Add a comment</string>
    <string name="action_save_post">Save post</string>
    <string name="action_view_crosspost_parent">View crosspost parent</string>
    <string name="action_search">Search</string>
    <string name="action_start_lazy_mode">Start Lazy Mode</string>
    <string name="action_stop_lazy_mode">Stop Lazy Mode</string>
    <string name="action_send">Send</string>
    <string name="action_sort">Sort</string>
    <string name="action_hide_post">Hide Post</string>
    <string name="action_unhide_post">Unhide Post</string>
    <string name="action_edit_post">Edit Post</string>
    <string name="action_delete_post">Delete Post</string>
    <string name="action_mark_nsfw">Mark NSFW</string>
    <string name="action_unmark_nsfw">Unmark NSFW</string>
    <string name="action_mark_spoiler">Mark Spoiler</string>
    <string name="action_unmark_spoiler">Unmark Spoiler</string>
    <string name="action_edit_flair">Edit Flair</string>
    <string name="action_change_post_layout">Change Post Layout</string>
    <string name="action_save">Save</string>
    <string name="action_edit_multi_reddit">Edit MultiReddit</string>
    <string name="action_delete_multi_reddit">Delete Multireddit</string>
    <string name="action_share">Share</string>
    <string name="action_preview">Preview</string>
    <string name="action_report">Report</string>
    <string name="action_see_removed">See Removed</string>
    <string name="action_crosspost">Crosspost</string>
    <string name="action_set_wallpaper">Set as Wallpaper</string>
    <string name="action_send_private_message">Send Private Message</string>
    <string name="action_block_user">Block User</string>
    <string name="action_select_user_flair">Select User Flair</string>
    <string name="action_give_award">Give Award</string>
    <string name="action_save_to_database">Save to Database</string>
    <string name="action_read_all_messages">Read All Messages</string>
    <string name="action_add_to_multireddit">Add to Multireddit</string>
    <string name="action_share_link">Share Link</string>
    <string name="action_copy_link">Copy Link</string>
    <string name="action_open_external_browser">Open in browser</string>
    <string name="action_add_to_post_filter">Add to Post Filter</string>
    <string name="action_delete_logs">Delete Logs</string>
    <string name="action_create_github_issue">Create GitHub Issue</string>
    <string name="action_share_post_link">Share Post Link</string>
    <string name="action_go_to_wiki">Go to Wiki</string>
    <string name="action_playback_speed">Playback Speed</string>
    <string name="action_contact_mods">Contact Mods</string>
    <string name="action_more_options">More Options</string>
    <string name="parse_json_response_error">Error occurred when parsing the JSON response</string>
    <string name="retrieve_token_error">Error Retrieving the token</string>
    <string name="something_went_wrong">Something went wrong. Try again later.</string>
    <string name="access_denied">Access denied</string>
    <string name="parse_user_info_error">Error occurred when parsing the user info</string>
    <string name="no_system_webview_error">Error opening System\'s WebView</string>
    <string name="error_loading_image_tap_to_retry">Error loading the image. Tap to retry.</string>
    <string name="load_posts_error">Error loading posts.\nTap to retry.</string>
    <string name="load_more_posts_error">Error loading posts.</string>
    <string name="load_post_error">Error loading this post.\nTap to retry.</string>
    <string name="search_subreddits_error">Error searching subreddits.\nTap to retry.</string>
    <string name="search_users_error">Error searching users.\nTap to retry.</string>
    <string name="no_posts">No posts found</string>
    <string name="no_comments">No comments found</string>
    <string name="no_subreddits">No subreddits found</string>
    <string name="nsfw">NSFW</string>
    <string name="settings_notification_master_title">Notification</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_amoled_dark_title">Amoled Dark</string>
    <string name="settings_interface_title">Interface</string>
    <string name="settings_gestures_and_buttons_title">Gestures &amp; Buttons</string>
    <string name="settigns_video_title">Video</string>
    <string name="settings_lazy_mode_interval_title">Lazy Mode Interval</string>
    <string name="settings_nsfw_and_spoiler_title">NSFW &amp; Spoiler</string>
    <string name="settings_about_master_title">About</string>
    <string name="settings_acknowledgement_master_title">Acknowledgement</string>
    <string name="settings_credits_master_title">Credits</string>
    <string name="settings_open_source_title">Open Source</string>
    <string name="settings_open_source_summary">Star it on Github if you like this app</string>
    <string name="settings_rate_title">Rate on Google Play</string>
    <string name="settings_rate_summary">Give me a 5-star rating and I will be really happy</string>
    <string name="settings_email_title">Email</string>
    <string name="settings_email_summary">docilealligator.app@gmail.com</string>
    <string name="settings_reddit_account_title">Reddit Account</string>
    <string name="settings_reddit_account_summary">u/Hostilenemy</string>
    <string name="settings_subreddit_title">Subreddit</string>
    <string name="settings_subreddit_summary">r/Infinity_For_Reddit</string>
    <string name="settings_share_title">Share</string>
    <string name="settings_share_summary">Share this app to other people if you enjoy it</string>
    <string name="settings_privacy_policy_title">Privacy Policy</string>
    <string name="settings_version_title">Infinity For Reddit</string>
    <string name="settings_version_summary">Version %s</string>
    <string name="settings_category_customization_title">Customization</string>
    <string name="settings_customize_light_theme_title">Light Theme</string>
    <string name="settings_customize_dark_theme_title">Dark Theme</string>
    <string name="settings_customize_amoled_theme_title">Amoled Theme</string>
    <string name="settings_manage_themes_title">Manage Themes</string>
    <string name="settings_category_material_you_title">Material You</string>
    <string name="settings_enable_material_you_warning_summary">Make sure you don\'t have themes named\n\"Material You\",\n\"Material You Dark\" or\n\"Material You Amoled\".\nOtherwise, rename them before enabling Material You.</string>
    <string name="settings_enable_material_you_title">Enable Material You</string>
    <string name="settings_enable_material_you_summary">Personalize Infinity based on Your Wallpaper</string>
    <string name="settings_apply_material_you_title">Apply Material You</string>
    <string name="settings_apply_material_you_summary">In case Infinity did not change the theme</string>
    <string name="settings_advanced_master_title">Advanced</string>
    <string name="settings_download_location_title">Download Location</string>
    <string name="settings_image_download_location_title">Image Download Location</string>
    <string name="settings_gif_download_location_title">Gif Download Location</string>
    <string name="settings_video_download_location_title">Video Download Location</string>
    <string name="settings_separate_folder_for_each_subreddit">Separate Folder for Each Subreddit</string>
    <string name="settings_save_nsfw_media_in_different_folder_title">Save NSFW Media in Different Location</string>
    <string name="settings_nsfw_download_location_title">NSFW Download Location</string>
    <string name="settings_security_title">Security</string>
    <string name="settings_data_saving_mode">Data Saving Mode</string>
    <string name="settings_translation_title">Translation</string>
    <string name="settings_translation_summary">Translate this app on POEditor. Thanks to all contributors.</string>
    <string name="settings_miscellaneous_title">Miscellaneous</string>
    <string name="settings_post_filter_title">Post Filter</string>
    <string name="settings_post_history_title">Post History</string>
    <string name="settings_sort_type_title">Sort Type</string>
    <string name="settings_reddit_user_agreement_title">Reddit User Agreement</string>
</resources>