<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:icon="@drawable/ic_outline_notifications_24dp"
        app:title="@string/settings_notification_master_title"
        app:fragment="gripe.everything.infinityforeverything.settings.NotificationPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:icon="@drawable/ic_interface_24dp"
        app:title="@string/settings_interface_title"
        app:fragment="gripe.everything.infinityforeverything.settings.InterfacePreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:title="@string/settings_theme_title"
        app:icon="@drawable/ic_outline_color_lens_24dp"
        app:fragment="gripe.everything.infinityforeverything.settings.ThemePreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:icon="@drawable/ic_gesture_24dp"
        app:title="@string/settings_gestures_and_buttons_title"
        app:fragment="gripe.everything.infinityforeverything.settings.GesturesAndButtonsPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:title="@string/settigns_video_title"
        android:icon="@drawable/ic_outline_video_24dp"
        app:fragment="gripe.everything.infinityforeverything.settings.VideoPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontListPreference
        app:defaultValue="2.5"
        android:entries="@array/settings_lazy_mode_interval"
        app:entryValues="@array/settings_lazy_mode_interval_values"
        app:key="lazy_mode_interval"
        app:icon="@drawable/ic_outline_access_time_24dp"
        app:title="@string/settings_lazy_mode_interval_title"
        app:useSimpleSummaryProvider="true" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:title="@string/settings_download_location_title"
        android:icon="@drawable/ic_download_24dp"
        app:fragment="gripe.everything.infinityforeverything.settings.DownloadLocationPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:key="security"
        app:title="@string/settings_security_title"
        app:icon="@drawable/ic_security_24dp"
        app:fragment="gripe.everything.infinityforeverything.settings.SecurityPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:title="@string/settings_data_saving_mode"
        app:icon="@drawable/ic_data_saving_mode_24dp"
        app:fragment="gripe.everything.infinityforeverything.settings.DataSavingModePreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:icon="@drawable/ic_nsfw_on_24dp"
        app:title="@string/settings_nsfw_and_spoiler_title"
        app:fragment="gripe.everything.infinityforeverything.settings.NsfwAndSpoilerFragment"/>

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:icon="@drawable/ic_history_24dp"
        android:title="@string/settings_post_history_title"
        app:fragment="gripe.everything.infinityforeverything.settings.PostHistoryFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:key="post_filter"
        app:icon="@drawable/ic_filter_24dp"
        app:title="@string/settings_post_filter_title" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:icon="@drawable/ic_sort_24dp"
        app:title="@string/settings_sort_type_title"
        app:fragment="gripe.everything.infinityforeverything.settings.SortTypePreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        app:icon="@drawable/ic_miscellaneous_24dp"
        app:title="@string/settings_miscellaneous_title"
        app:fragment="gripe.everything.infinityforeverything.settings.MiscellaneousPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        android:icon="@drawable/ic_advanced_24dp"
        app:title="@string/settings_advanced_master_title"
        app:fragment="gripe.everything.infinityforeverything.settings.AdvancedPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        android:icon="@drawable/ic_about_24dp"
        app:title="@string/settings_about_master_title"
        app:fragment="gripe.everything.infinityforeverything.settings.AboutPreferenceFragment" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        android:key="privacy_policy"
        app:icon="@drawable/ic_outline_privacy_policy_24dp"
        app:title="@string/settings_privacy_policy_title" />

    <gripe.everything.infinityforeverything.customviews.CustomFontPreference
        android:key="reddit_user_agreement"
        app:icon="@drawable/ic_outline_user_agreement_24dp"
        app:title="@string/settings_reddit_user_agreement_title" />

</androidx.preference.PreferenceScreen>